# mimic-check

./: .gitignore  README.md  config.toml  example.py  package_cache.json  pending.json  pyproject.toml  requirements_example.txt  todo.md  trusted.json  trusted_bac.json
.github/DISCUSSION_TEMPLATE/: safety-proposal.yml
.github/global_discussion_template/: safety-proposal.yml
.github/workflows/: commit-consensus.yml  discussion-gatekeeper.yml  package-proposal-verdict.yml
src/mimic/: main.py
