[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mimic-check"
version = "0.1.0"
authors = [
  { name = "Disnana", email = "support@disnana.com" },
]
description = "A security tool to check for typosquatting and package reliability in requirements.txt"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "toml",
]

[project.scripts]
mimi = "mimic.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mimic = ["*.toml"]
